# mesh-tools

./: .gitignore  Cargo.toml  README.md  run_all_examples.sh
examples/: 01_primitives.rs  02_mesh_modifiers.rs  03_custom_mesh.rs  04_mesh_operations.rs  05_export_options.rs  06_mesh_extrusion.rs  07_mesh_subdivision.rs  08_mesh_welding.rs  09_normal_operations.rs  10_mesh_transformations.rs  11_bend_modifier.rs  12_custom_materials.rs  13_multi_material_scene.rs  animation_demo.rs  colored_shapes.rs  custom_mesh_demo.rs  emissive_mapping_demo.rs  fix_glb_json.rs  hierarchy_demo.rs  inspect_glb.rs  instancing_demo.rs  materials_demo.rs  metalness_demo.rs  normal_mapping_demo.rs  occlusion_mapping_demo.rs  pbr_materials_demo.rs  primitives_demo.rs  roughness_demo.rs  rustacean_plate_demo.rs  simple_box.rs  specular_glossiness_demo.rs  terrain_demo.rs  texture_demo.rs  validate_glb.rs
src/: builder.rs  builder_animation.rs  builder_material.rs  builder_material_specular.rs  builder_primitives.rs  builder_texture.rs  compat.rs  constants.rs  error.rs  export.rs  gltf.rs  lib.rs  main.rs  material.rs  mesh.rs  models.rs  modifiers.rs  primitives.rs  texture.rs
