[package]
name = "mesh-tools"
version = "0.1.0"
edition = "2024"
authors = ["Michael Blazej <michael.blazej@gmail.com>"]
license = "MIT"
description = "Mesh tools for generating and manipulating 3D meshes"
repository = "https://github.com/michaelblazej/mesh-tools"
readme = "README.md"
keywords = ["mesh", "3d", "geometry", "tools"]

[dependencies]
glam = "0.24.1"
thiserror = "1.0.43"
noise = "0.8.2"
rand = "0.8.5"
byteorder = "1.4.3"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.14.0"

[dev-dependencies]
gltf = "1.3"
