[package]
name = "gltf-export"
version = "0.1.0"
edition = "2021"
authors = ["Cascade"]
description = "A Rust library for exporting glTF/GLB files"

[dependencies]
# For serializing/deserializing JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For binary data manipulation
byteorder = "1.4"
base64 = "0.13"
# For managing errors
thiserror = "1.0"
# For generating UUIDs
uuid = { version = "1.0", features = ["v4"] }
# For handling matrix and vector operations
nalgebra = "0.31"
# For image processing and texture generation
image = "0.24"

[[example]]
name = "simple_box"
path = "examples/simple_box.rs"

[[example]]
name = "materials_demo"
path = "examples/materials_demo.rs"

[[example]]
name = "texture_demo"
path = "examples/texture_demo.rs"

[[example]]
name = "hierarchy_demo"
path = "examples/hierarchy_demo.rs"

[[example]]
name = "custom_mesh_demo"
path = "examples/custom_mesh_demo.rs"

[[example]]
name = "primitives_demo"
path = "examples/primitives_demo.rs"
